# plthook

./: Dockerfile  README.md  plthook_elf.c  plthook_osx.c  plthook_win32.c
.github/workflows/: oracle-client.yml  run-tests.yml
test/: .gitignore  Makefile  libtest.c  libtest.h  run-test.bat  testlazybinding.c  testprog.c
test/android/: run_tests.sh
test/android/jni/: Android.mk  Application.mk
test/metacall/: CMakeLists.txt  README.md  dynlib.h  libnode.c  metacall.c  metacall.h  node-static.c
